--- a/application/index/view/Dlwz/imgup.html
+++ b/application/index/view/Dlwz/imgup.html
@@ -22,7 +22,7 @@
                           
           },
           error:function(xhr){
-             alert("失败");
+             layer.msg("失败");
           }
       });
   }
@@ -34,6 +34,10 @@
   </form> 
 
   </body>
-
+  <script>
+      layui.use('layer', function(){
+        var layer = layui.layer;
+      });   
+    </script>
  
 </html>
