--- a/application/index/view/Dlwz/revise.html
+++ b/application/index/view/Dlwz/revise.html
@@ -8,10 +8,12 @@
     </script>
     <script src="/public/static/layui/lay/modules/layer.js"></script>
     <link rel="stylesheet" href="/public/static/layui/css/layui.css">
+ 
     <script>
-        layui.use('element', function(){
-        var element = layui.element;
-        
+        layui.use(['element','layer'], function(){
+            var element = layui.element;
+            var layer = layui.layer;
+            
         });
     </script> 
     <script type="text/javascript">
@@ -25,12 +27,13 @@
                 data: $('#form1').serialize(),
                 success: function (result) {
                     console.log(result);//打印服务端返回的数据(调试用)?id="+InfoId
-                    alert(result["info"]);
+                    layer.msg(result["info"]);
                 },
                 error : function(event, XMLHttpRequest, ajaxOptions, thrownError) {
                     // thrownError 只有当异常发生时才会被传递
                     this; // 监听的 dom 元素
                     console.log(this);
+                    layer.msg("异常")
                 }
         });
     }
