--- a/application/index/view/Left/group.html
+++ b/application/index/view/Left/group.html
@@ -2,15 +2,15 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>a1</title>
+<title>a3</title>
 
 
 </head>
 <body>
 
 <div>
-测试内容a1
-管理后台
+测试内容
+权限组施工中
 </div>
 
 
