--- a/application/index/view/User/create.html
+++ b/application/index/view/User/create.html
@@ -1,17 +1,17 @@
-<!doctype html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>创建用户</title>
-
-
-</head>
+ 
 <body>
-
-<form action="{:url('index/index/upload')}" enctype="multipart/form-data" method="post">
-	<input type="file" name="image" /> <br> 
-	<input type="submit" value="上传" /> 
-	</form> 
-
+<script>
+function disp_prompt()
+{
+	window.open("update.html","new","height=280,width=800,top=10,left=20,resizable=no, location=no",false);          
+         width = screen.width;  
+     height = screen.height;  
+     hdc.moveTo((width-322)/2,(height-206)/2);  
+}
+</script>
+ 
+<input type="button" onclick="disp_prompt()" value="test" />
+ 
 </body>
 </html>
