--- a/application/index/view/Left/permit.html
+++ b/application/index/view/Left/permit.html
@@ -94,12 +94,26 @@
             , layEvent = obj.event; //获得 lay-event 对应的值           表右侧js
           if (layEvent === 'del') {
             layer.confirm('真的删除行么', function (index) {
-              obj.del(); //删除对应行（tr）的DOM结构
+              myAjax("{:url('index/Left/deleteinf')}",data.id),
               layer.close(index);
+              setTimeout("location.reload()",1500);
+              
+             
               //向服务端发送删除指令
             });
           } else if (layEvent === 'edit') {
-            layer.msg('编辑操作');
+            layer.open({
+                  type: 2,
+                  title: false,
+                  closeBtn: 3,
+                  area: ['700px', '450px'],
+                  fixed: false, //不固定
+                  maxmin: true,
+                  shadeClose: true,
+                  shade: false,
+                  skin: 'layui-layer-molv',
+                  content: "{:url('index/Left/update')}?id="+data.id,
+                });
           }
         });
         table.on('toolbar(test)', function (obj) {
@@ -138,7 +152,7 @@
                   shadeClose: true,
                   shade: false,
                   skin: 'layui-layer-molv',
-                  content: "{:url('index/Left/update')}",
+                  content: "{:url('index/Left/update')}?id="+checkStatus.data[0].id,
                 });
               }
               break;
@@ -146,7 +160,12 @@
               if (data.length === 0) {
                 layer.msg('请选择一行');
               } else {
-                layer.msg('删除');
+                layer.confirm('真的删除行么', function (index) {
+                  myAjax("{:url('index/Left/deleteinf')}",checkStatus.data[0].id),
+                  layer.close(index);
+                  setTimeout("location.reload()",1500);
+                  //向服务端发送删除指令
+                });
               }
               break;
           };
