--- a/application/index/view/Left/update.html
+++ b/application/index/view/Left/update.html
@@ -21,7 +21,7 @@
                 //几个参数需要注意一下
                 type: "POST",//方法类型
                 dataType: "json",//预期服务器返回的数据类型
-                url: "{:url('index/Left/updateinf')}",//url
+                url: "{:url('index/Left/updateinf')}",
                 data: $('#form1').serialize(),
                 success: function (result) {
                     console.log(result["info"]);           //打印服务端返回的数据(调试用)
@@ -29,7 +29,7 @@
                     var index = parent.layer.getFrameIndex(window.name);
                     parent.layer.close(index);
                     if(result["status"]==1){
-                        parent.setTimeout("parent.location.reload()",2000);
+                        parent.setTimeout("parent.location.reload()",1500);
                     }
                     
                 },
@@ -49,11 +49,6 @@
         back = function () {
             var index = parent.layer.getFrameIndex(window.name);
             parent.layer.close(index);
-            var checkStatus = parent.layui.table.checkStatus('layui-table-tool');// 获取失败
-            var params = checkStatus.data[0];// params就是父页面选中的那条记录
-             console.log(checkStatus)
-
-           
         }
 
     </script>
@@ -61,35 +56,38 @@
 
 <body>
     <div class="" style="padding-top:100px"></div>
+    {foreach $msg as $key=>$vo}
+   
     <form class="layui-form" FORM method="post" id="form1" onsubmit="return false" action="##">
         <div class="layui-form-item">
             <label class="layui-form-label">节点名</label>
             <div class="layui-input-inline">
-                <input type="text" name="name" lay-verify="required" placeholder="请输入" autocomplete="off"
+                <input type="text" name="name" lay-verify="required" value="{$vo.name}" autocomplete="off"
                     class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">网址</label>
             <div class="layui-input-inline">
-                <input type="text" name="url" lay-verify="required" placeholder="请输入" autocomplete="off"
+                <input type="text" name="url" lay-verify="required" value="{$vo.url}" autocomplete="off"
                     class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">权限等级</label>
             <div class="layui-input-inline">
-                <input type="text" name="lid" lay-verify="required" placeholder="请输入" autocomplete="off"
+                <input type="text" name="lid" lay-verify="required" value="{$vo.lid}" autocomplete="off"
                     class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">父id</label>
             <div class="layui-input-inline">
-                <input type="text" name="parent" lay-verify="required" placeholder="请输入" autocomplete="off"
+                <input type="text" name="parent" lay-verify="required" value="{$vo.parent}" autocomplete="off"
                     class="layui-input">
             </div>
         </div>
+        <input type="hidden" name="id" value="{$vo.id}" />
         <div class="layui-form-item">
             <div class="layui-input-block">
                 <button class="layui-btn layui-btn-radius" onclick='login()'>立即提交</button>
@@ -97,6 +95,7 @@
             </div>
         </div>
     </form>
+    {/foreach}
     </div>
 </body>
 
