权限组完成

--- a/application/index/view/Left/permit.html
+++ b/application/index/view/Left/permit.html
@@ -6,37 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
   <link rel="stylesheet" href="/public/static/layui/css/layui.css">
-  <title>也许是个主页</title>
-  <style type="text/css">
-    ul.pagination {
-      display: inline-block;
-      padding: 0;
-      margin: 0;
-    }
-
-    ul.pagination li {
-      display: inline;
-    }
-
-    ul.pagination li a {
-      color: #009688;
-      float: left;
-      padding: 8px 16px;
-      text-decoration: none;
-    }
-
-    ul.pagination li span {
-      color: black;
-      float: left;
-      padding: 8px 16px;
-      text-decoration: none;
-    }
-
-    #infoDiv {
-      padding: 20px;
-
-    }
-  </style>
+  <title>权限</title>
   <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.js"></script>
   <script src="/public/static/layui/layui.js"></script>
   <script type="text/javascript">
@@ -168,8 +138,8 @@
                 });
               }
               break;
-          };
-        });
+            };
+         });
       })
     })
 
