--- a/application/index/view/Dlwz/echos.html
+++ b/application/index/view/Dlwz/echos.html
@@ -24,7 +24,7 @@
                         alert(result["info"]);
                         $('#captchaImg').attr("src", "{:captcha_src()}"); 
                     }else if(result["status"]==1){
-                        window.location.href = "{:url('index/Dlwz/home')}";//?id="+result["info"];
+                        window.location.href = "{:url('index/Dlwz/realhome')}";//?id="+result["info"];
                     //document.write(result) ;
                 }
                 },
