--- a/application/index/view/Left/permit.html
+++ b/application/index/view/Left/permit.html
@@ -207,7 +207,8 @@
       <div style="padding: 15px" class="layui-table-body layui-table-main">
         <table id="demo" lay-filter="test"></table>
       </div>
-      <div class="layui-table-fixed layui-table-fixed-r" style="   left: auto;
+      <div class="layui-table-fixed layui-table-fixed-r" 
+      style="   left: auto;
                 right: -1px;
                 border-width: 0 0 0 1px;
                 box-shadow: -1px 0 8px rgba(0,0,0,.08);
