--- a/application/index/view/Dlwz/home.html
+++ b/application/index/view/Dlwz/home.html
@@ -109,8 +109,8 @@
       <ul class="layui-nav layui-layout-right">
         <li class="layui-nav-item">
           <a href="javascript:;">
-            <img src="/public/images.jfif" class="layui-nav-img">
-            admin
+            <img src="/public/uploads/{$header.img}" class="layui-nav-img">
+            {$header.nickname}
           </a>
           <dl class="layui-nav-child">
             <dd><a href="">基本资料</a></dd>
@@ -158,9 +158,10 @@
       <div style="padding: 15px" class="info-body">
         <table class="layui-table">
           <colgroup>
-            <col width="100px">
-            <col span="3" width="200px">
-            <col span="3" width="70px">
+            <col  width="70px">
+            <col  width="100px">
+            <col span="4" width="150px">
+            <col span="3" width="100px">
           </colgroup>
           <thead>
             <tr>
@@ -169,9 +170,11 @@
               <th>头像</th>
               <th>用户名</th>
               <th>密码</th>
+              <th>权限</th>
               <th>删除</th>
               <th>修改</th>
-              <th>上传头像</th>
+
+             
             </tr>
           </thead>
           <tbody>
@@ -183,6 +186,13 @@
               <td>{$vo.username}</td>
               <td>{$vo.password}</td>
               <td>
+                  {foreach $persona5 as $key=>$p}
+                    {if $vo.lv==$p.id}
+                    {$p.name}
+                    {/if}
+                  {/foreach}
+              </td>
+              <td>
                 <FORM method="post" id="form1" action="##" align="center" onsubmit="return false">
                   <INPUT type="button" class="layui-btn layui-btn-primary" value=" 删除 " onclick="login('{$vo.id}')">
                 </FORM>
@@ -192,9 +202,7 @@
                   <INPUT type="submit" class="layui-btn layui-btn-primary" value=" 修改 ">
                 </FORM>
               </td>
-              <td>
-                <a href="{:url('index/Dlwz/imgup')}?id={$vo.id}" style="color:#009688">头像上传</a>
-              </td>
+
             </tr>
             {/foreach}
           </tbody>
